--- a/src/index.html
+++ b/src/index.html
@@ -2,21 +2,24 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Search</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet" />
+
+  <link rel="stylesheet" href="./css/styles.css" />
+  <title>Document</title>
 </head>
 
 <body>
-  <form id="search-form">
-    <input type="text" name="searchQuery" placeholder="Search images...">
-    <button type="submit">Search</button>
+  <form class="form">
+    <input type="text" class="user-input" placeholder="Search images..." />
+    <button type="submit" class="submit-button">Search</button>
   </form>
-  <div class="loader"></div>
   <ul class="gallery"></ul>
-  <script type="module" src="main.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
+
+</html>
 
 </html>
 
