--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,30 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet" />
-
+  <title>Homework 11</title>
   <link rel="stylesheet" href="./css/styles.css" />
-  <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet" />
 </head>
 
 <body>
-  <form class="form">
-    <input type="text" class="user-input" placeholder="Search images..." />
-    <button type="submit" class="submit-button">Search</button>
-  </form>
-  <ul class="gallery"></ul>
+  <main>
+    <div class="container">
+      <form class="search-form">
+        <input class="search-input" type="text" name="query" placeholder="Search images..." />
+        <button class="submit-button" type="submit">Search</button>
+      </form>
+      <ul class="gallery"></ul>
+      <div class="loader" style="display: none">Loading...</div>
+    </div>
+  </main>
+
   <script type="module" src="./main.js"></script>
 </body>
 
 </html>
+   
