--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
 <body>
   <main>
     <div class="container">
-      <form class="search-form">
-        <input class="search-input" type="text" name="query" placeholder="Search images..." />
+      <form class="form">
+        <input class="user-input" type="text" name="query" placeholder="Search images..." />
         <button class="submit-button" type="submit">Search</button>
       </form>
       <ul class="gallery"></ul>
