--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
 <body>
   <main>
     <div class="container">
-      <form class="form">
-        <input class="user-input" type="text" name="query" placeholder="Search images..." />
-        <button class="submit-button" type="submit">Search</button>
+      <form class="search-form">
+        <input class="search-input" type="text" name="query" placeholder="Search images..." />
+        <button class="search-btn" type="submit">Search</button>
       </form>
       <ul class="gallery"></ul>
       <div class="loader" style="display: none">Loading...</div>
@@ -29,4 +29,3 @@
 </body>
 
 </html>
-   
